--- a/src/main/resources/snaked/view/MainMenu.fxml
+++ b/src/main/resources/snaked/view/MainMenu.fxml
@@ -2,16 +2,20 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="snaked.sceneController.MenuController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #9E9E9E;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="snaked.sceneController.MenuController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -35,18 +39,24 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Snaked" translateX="40.0" wrappingWidth="97.63671875" GridPane.columnIndex="3" GridPane.rowIndex="1">
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Sacramento;" text="Snaked" translateX="5.0" translateY="-20.0" wrappingWidth="131.13671875" GridPane.columnIndex="4" GridPane.rowIndex="1">
          <GridPane.margin>
             <Insets left="65.0" top="10.0" />
          </GridPane.margin>
          <font>
-            <Font size="24.0" />
+            <Font name="System Bold Italic" size="36.0" />
          </font>
       </Text>
-      <Button fx:id="startButton" mnemonicParsing="false" onAction="#startGame" text="Start" GridPane.columnIndex="4" GridPane.rowIndex="5">
+      <Button fx:id="startButton" mnemonicParsing="false" onAction="#startGame" prefHeight="25.0" prefWidth="91.0" scaleX="1.3" scaleY="1.3" style="-fx-text-fill: WHITE; -fx-background-color: Black; -fx-background-radius: 15px;" text="Start" translateX="35.0" translateY="20.0" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="5">
          <GridPane.margin>
             <Insets left="5.0" />
          </GridPane.margin>
       </Button>
+      <Button fx:id="scoreboardButton" mnemonicParsing="false" onAction="#goToScoreboard" prefHeight="25.0" prefWidth="86.0" style="-fx-background-color: BLACK; -fx-text-fill: white;" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="7" />
+      <ImageView fx:id="snakeLogoView" fitHeight="114.0" fitWidth="137.0" pickOnBounds="true" preserveRatio="true" translateX="20.0" GridPane.columnIndex="5" GridPane.rowIndex="3">
+         <image>
+            <Image url="@../Icons/snakeLogo.png" />
+         </image>
+      </ImageView>
    </children>
 </GridPane>
