--- a/src/main/resources/snaked/view/MainMenu.fxml
+++ b/src/main/resources/snaked/view/MainMenu.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -10,10 +11,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #9E9E9E;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="snaked.sceneController.MenuController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #9E9E9E;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="snaked.App">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -47,16 +49,37 @@
             <Font name="System Bold Italic" size="36.0" />
          </font>
       </Text>
-      <Button fx:id="startButton" mnemonicParsing="false" onAction="#startGame" prefHeight="25.0" prefWidth="91.0" scaleX="1.3" scaleY="1.3" style="-fx-text-fill: WHITE; -fx-background-color: Black; -fx-background-radius: 15px;" text="Start" translateX="35.0" translateY="20.0" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="5">
+      <Button mnemonicParsing="false" onAction="#startGame" prefHeight="25.0" prefWidth="91.0" scaleX="1.3" scaleY="1.3" style="-fx-text-fill: WHITE; -fx-background-color: Black; -fx-background-radius: 15px;" text="Start" translateX="35.0" translateY="20.0" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="5">
          <GridPane.margin>
             <Insets left="5.0" />
          </GridPane.margin>
       </Button>
-      <Button fx:id="scoreboardButton" mnemonicParsing="false" onAction="#goToScoreboard" prefHeight="25.0" prefWidth="86.0" style="-fx-background-color: BLACK; -fx-text-fill: white;" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="7" />
+      <Button fx:id="scoreboardButton" mnemonicParsing="false" onAction="#goToScoreboard" prefHeight="25.0" prefWidth="86.0" style="-fx-background-color: #9E9E9E;" textFill="#9e9e9e" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="7">
+         <font>
+            <Font size="10.0" />
+         </font>
+         <graphic>
+            <ImageView fitHeight="71.0" fitWidth="75.0" onDragDetected="#goToScoreboard" pickOnBounds="true" preserveRatio="true" translateY="20.0">
+               <image>
+                  <Image url="@../Icons/scoreboardButton.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
       <ImageView fx:id="snakeLogoView" fitHeight="114.0" fitWidth="137.0" pickOnBounds="true" preserveRatio="true" translateX="20.0" GridPane.columnIndex="5" GridPane.rowIndex="3">
          <image>
             <Image url="@../Icons/snakeLogo.png" />
          </image>
       </ImageView>
+      <Label prefHeight="17.0" prefWidth="69.0" text="Scoreboard" translateX="12.0" translateY="-20.0" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="9" />
+      <Button fx:id="settingsButton" mnemonicParsing="false" onAction="#goToSettings" style="-fx-background-color: #9E9E9E;" translateX="-16.0" GridPane.columnIndex="8" GridPane.rowIndex="7">
+         <graphic>
+            <ImageView fitHeight="51.0" fitWidth="51.0" onDragDetected="#goToSettings" pickOnBounds="true" preserveRatio="true" translateX="-13.0" translateY="18.0">
+               <image>
+                  <Image url="@../Icons/settings.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Arial;" text="Settings" translateX="-16.0" translateY="-20.0" GridPane.columnIndex="8" GridPane.rowIndex="9" />
    </children>
 </GridPane>
