--- a/src/main/resources/snaked/view/SettingsMenu.fxml
+++ b/src/main/resources/snaked/view/SettingsMenu.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="settingsWindow" fx:id="settingsWindow" prefHeight="432.0" prefWidth="448.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="snaked.sceneController.SettingsMenuController">
+<AnchorPane id="settingsWindow" fx:id="settingsWindow" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="snaked.sceneController.SettingsMenuController">
    <children>
-      <VBox alignment="CENTER" layoutX="70.0" layoutY="83.0" prefHeight="335.0" prefWidth="309.0" spacing="20.0">
+      <VBox alignment="CENTER" layoutX="147.0" layoutY="55.0" prefHeight="335.0" prefWidth="309.0" spacing="20.0">
          <children>
             <Label prefHeight="17.0" prefWidth="70.0" text="Sound" textAlignment="CENTER" />
             <Button fx:id="volumeButton" mnemonicParsing="false" onAction="#volumeButtonClick" prefHeight="40.0" prefWidth="40.0">
@@ -48,6 +48,6 @@
             </HBox>
          </children>
       </VBox>
-      <Label id="settingsHeader" layoutX="177.0" layoutY="14.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" prefWidth="96.0" text="Settings" textAlignment="CENTER" AnchorPane.leftAnchor="177.0" AnchorPane.rightAnchor="175.0" />
+      <Label id="settingsHeader" alignment="CENTER" layoutX="1.0" layoutY="14.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" prefWidth="448.0" text="Settings" textAlignment="CENTER" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="-1.0" />
    </children>
 </AnchorPane>
