--- a/src/main/resources/snaked/view/scoreboard.fxml
+++ b/src/main/resources/snaked/view/scoreboard.fxml
@@ -1,41 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
-  <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-  </columnConstraints>
-  <rowConstraints>
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-  </rowConstraints>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="ScoreBoard" translateX="10.0" wrappingWidth="125.650390625" GridPane.columnIndex="4" GridPane.columnSpan="3" GridPane.rowIndex="1">
+      <Text layoutX="237.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Scoreboard" wrappingWidth="126.78306007385254">
          <font>
             <Font size="24.0" />
          </font>
       </Text>
+      <Text layoutX="234.0" layoutY="139.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1st : &lt;insert point&gt; pts" />
+      <Text layoutX="234.0" layoutY="180.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1st : &lt;insert point&gt; pts" />
+      <Text layoutX="234.0" layoutY="218.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1st : &lt;insert point&gt; pts" />
+      <Text layoutX="234.0" layoutY="289.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1st : &lt;insert point&gt; pts" />
+      <Text layoutX="234.0" layoutY="255.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1st : &lt;insert point&gt; pts" />
+      <ImageView fitHeight="41.0" fitWidth="56.0" layoutX="181.0" layoutY="61.0" pickOnBounds="true" preserveRatio="true" />
    </children>
-</GridPane>
+</AnchorPane>
