--- a/src/main/resources/snaked/view/scoreboard.fxml
+++ b/src/main/resources/snaked/view/scoreboard.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #9E9E9E;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Text layoutX="237.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Scoreboard" wrappingWidth="126.78306007385254">
          <font>
@@ -13,10 +14,11 @@
          </font>
       </Text>
       <Text layoutX="234.0" layoutY="139.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1st : &lt;insert point&gt; pts" />
-      <Text layoutX="234.0" layoutY="180.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1st : &lt;insert point&gt; pts" />
-      <Text layoutX="234.0" layoutY="218.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1st : &lt;insert point&gt; pts" />
-      <Text layoutX="234.0" layoutY="289.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1st : &lt;insert point&gt; pts" />
-      <Text layoutX="234.0" layoutY="255.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1st : &lt;insert point&gt; pts" />
+      <Text layoutX="232.0" layoutY="180.0" strokeType="OUTSIDE" strokeWidth="0.0" text="2nd : &lt;insert point&gt; pts" />
+      <Text layoutX="234.0" layoutY="218.0" strokeType="OUTSIDE" strokeWidth="0.0" text="3rd : &lt;insert point&gt; pts" />
+      <Text layoutX="234.0" layoutY="289.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5th : &lt;insert point&gt; pts" />
+      <Text layoutX="234.0" layoutY="255.0" strokeType="OUTSIDE" strokeWidth="0.0" text="4th : &lt;insert point&gt; pts" />
       <ImageView fitHeight="41.0" fitWidth="56.0" layoutX="181.0" layoutY="61.0" pickOnBounds="true" preserveRatio="true" />
+      <Button layoutX="14.0" layoutY="22.0" mnemonicParsing="false" style="-fx-background-color: #9E9E9E;" />
    </children>
 </AnchorPane>
