Just added some style to main menu #1

--- a/src/main/resources/snaked/view/scoreboard.fxml
+++ b/src/main/resources/snaked/view/scoreboard.fxml
@@ -13,11 +13,26 @@
             <Font size="24.0" />
          </font>
       </Text>
-      <Text layoutX="234.0" layoutY="139.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1st : &lt;insert point&gt; pts" />
-      <Text layoutX="232.0" layoutY="180.0" strokeType="OUTSIDE" strokeWidth="0.0" text="2nd : &lt;insert point&gt; pts" />
-      <Text layoutX="234.0" layoutY="218.0" strokeType="OUTSIDE" strokeWidth="0.0" text="3rd : &lt;insert point&gt; pts" />
-      <Text layoutX="234.0" layoutY="289.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5th : &lt;insert point&gt; pts" />
-      <Text layoutX="234.0" layoutY="255.0" strokeType="OUTSIDE" strokeWidth="0.0" text="4th : &lt;insert point&gt; pts" />
+      <Text layoutX="224.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1st : &lt;insert point&gt; pts">
+         <font>
+            <Font size="15.0" />
+         </font></Text>
+      <Text layoutX="221.0" layoutY="179.0" strokeType="OUTSIDE" strokeWidth="0.0" text="2nd : &lt;insert point&gt; pts">
+         <font>
+            <Font size="15.0" />
+         </font></Text>
+      <Text layoutX="223.0" layoutY="216.0" strokeType="OUTSIDE" strokeWidth="0.0" text="3rd : &lt;insert point&gt; pts">
+         <font>
+            <Font size="15.0" />
+         </font></Text>
+      <Text layoutX="223.0" layoutY="290.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5th : &lt;insert point&gt; pts">
+         <font>
+            <Font size="15.0" />
+         </font></Text>
+      <Text layoutX="223.0" layoutY="256.0" strokeType="OUTSIDE" strokeWidth="0.0" text="4th : &lt;insert point&gt; pts">
+         <font>
+            <Font size="15.0" />
+         </font></Text>
       <ImageView fitHeight="41.0" fitWidth="56.0" layoutX="181.0" layoutY="61.0" pickOnBounds="true" preserveRatio="true" />
       <Button layoutX="14.0" layoutY="22.0" mnemonicParsing="false" style="-fx-background-color: #9E9E9E;" />
    </children>
