--- a/src/main/resources/snaked/view/MainMenu.fxml
+++ b/src/main/resources/snaked/view/MainMenu.fxml
@@ -5,81 +5,88 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #9E9E9E;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="snaked.App">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-  </rowConstraints>
+
+<AnchorPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="snaked.App">
    <children>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Sacramento;" text="Snaked" translateX="5.0" translateY="-20.0" wrappingWidth="131.13671875" GridPane.columnIndex="4" GridPane.rowIndex="1">
-         <GridPane.margin>
-            <Insets left="65.0" top="10.0" />
-         </GridPane.margin>
-         <font>
-            <Font name="System Bold Italic" size="36.0" />
-         </font>
-      </Text>
-      <Button mnemonicParsing="false" onAction="#startGame" prefHeight="25.0" prefWidth="91.0" scaleX="1.3" scaleY="1.3" style="-fx-text-fill: WHITE; -fx-background-color: Black; -fx-background-radius: 15px;" text="Start" translateX="35.0" translateY="20.0" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="5">
-         <GridPane.margin>
-            <Insets left="5.0" />
-         </GridPane.margin>
-      </Button>
-      <Button fx:id="scoreboardButton" mnemonicParsing="false" onAction="#goToScoreboard" prefHeight="25.0" prefWidth="86.0" style="-fx-background-color: #9E9E9E;" textFill="#9e9e9e" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="7">
-         <font>
-            <Font size="10.0" />
-         </font>
-         <graphic>
-            <ImageView fitHeight="71.0" fitWidth="75.0" onDragDetected="#goToScoreboard" pickOnBounds="true" preserveRatio="true" translateY="20.0">
+      <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #29f04d;">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Sacramento;" text="Snaked" translateX="5.0" translateY="-20.0" wrappingWidth="131.13671875" GridPane.columnIndex="4" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="65.0" top="10.0" />
+               </GridPane.margin>
+               <font>
+                  <Font name="System Bold Italic" size="36.0" />
+               </font>
+            </Text>
+            <Button fx:id="startButton" mnemonicParsing="false" onAction="#startGame" prefHeight="25.0" prefWidth="91.0" scaleX="1.3" scaleY="1.3" stylesheets="@../cssStyles/MainMenu.css" text="Start" translateX="-50.0" translateY="20.0" GridPane.columnIndex="7" GridPane.columnSpan="2" GridPane.rowIndex="5">
+               <GridPane.margin>
+                  <Insets left="5.0" />
+               </GridPane.margin>
+            </Button>
+            <Button fx:id="scoreboardButton" mnemonicParsing="false" onAction="#goToScoreboard" prefHeight="25.0" prefWidth="86.0" style="-fx-background-color: #29f04d;" textFill="#9e9e9e" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="7">
+               <font>
+                  <Font size="10.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="65.0" fitWidth="65.0" onDragDetected="#goToScoreboard" pickOnBounds="true" preserveRatio="true" translateX="-10.0" translateY="5.0">
+                     <image>
+                        <Image url="@../Icons/scoreboardButton.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <ImageView fx:id="snakeLogoView" fitHeight="114.0" fitWidth="137.0" pickOnBounds="true" preserveRatio="true" translateX="20.0" GridPane.columnIndex="5" GridPane.rowIndex="3">
                <image>
-                  <Image url="@../Icons/scoreboardButton.png" />
+                  <Image url="@../Icons/snakeLogo.png" />
                </image>
             </ImageView>
-         </graphic></Button>
-      <ImageView fx:id="snakeLogoView" fitHeight="114.0" fitWidth="137.0" pickOnBounds="true" preserveRatio="true" translateX="20.0" GridPane.columnIndex="5" GridPane.rowIndex="3">
-         <image>
-            <Image url="@../Icons/snakeLogo.png" />
-         </image>
-      </ImageView>
-      <Label prefHeight="17.0" prefWidth="69.0" text="Scoreboard" translateX="12.0" translateY="-20.0" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="9" />
-      <Button fx:id="settingsButton" mnemonicParsing="false" onAction="#goToSettings" style="-fx-background-color: #9E9E9E;" translateX="-16.0" GridPane.columnIndex="8" GridPane.rowIndex="7">
-         <graphic>
-            <ImageView fitHeight="51.0" fitWidth="51.0" onDragDetected="#goToSettings" pickOnBounds="true" preserveRatio="true" translateX="-13.0" translateY="18.0">
-               <image>
-                  <Image url="@../Icons/settings.png" />
-               </image>
-            </ImageView>
-         </graphic>
-      </Button>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Arial;" text="Settings" translateX="-16.0" translateY="-20.0" GridPane.columnIndex="8" GridPane.rowIndex="9" />
+            <Label prefHeight="17.0" prefWidth="69.0" text="Scoreboard" translateX="-40.0" GridPane.columnIndex="6" GridPane.columnSpan="2" GridPane.rowIndex="8" />
+            <Button fx:id="settingsButton" mnemonicParsing="false" onAction="#goToSettings" style="-fx-background-color: #29f04d;" translateX="-16.0" GridPane.columnIndex="8" GridPane.rowIndex="7">
+               <graphic>
+                  <ImageView fitHeight="51.0" fitWidth="51.0" onDragDetected="#goToSettings" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Icons/settings.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Arial;" text="Settings" translateX="-4.0" GridPane.columnIndex="8" GridPane.rowIndex="8" />
+         </children>
+      </GridPane>
    </children>
-</GridPane>
+</AnchorPane>
