Add colors to button indicating what options have been picked #2

--- a/src/main/resources/snaked/cssStyles/SettingsMenu.css
+++ b/src/main/resources/snaked/cssStyles/SettingsMenu.css
@@ -14,6 +14,15 @@
     -fx-pref-height: 20px;
     -fx-pref-width: 62px;
 }
+#easyButton{
+    -fx-background-color: #443c3c;
+}
+#map1Button{
+    -fx-background-color: #443c3c;
+}
+#snake1Button{
+    -fx-background-color: #443c3c;
+}
 .label{
     -fx-font-family: Sacramento;
     -fx-alignment: center;
