--- a/src/main/resources/snaked/view/scoreboard.fxml
+++ b/src/main/resources/snaked/view/scoreboard.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #9E9E9E;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #9E9E9E;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="snaked.sceneController.ScoreBoardController">
    <children>
       <Text layoutX="237.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Scoreboard" wrappingWidth="126.78306007385254">
          <font>
@@ -18,7 +19,23 @@
       <Text layoutX="234.0" layoutY="218.0" strokeType="OUTSIDE" strokeWidth="0.0" text="3rd : &lt;insert point&gt; pts" />
       <Text layoutX="234.0" layoutY="289.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5th : &lt;insert point&gt; pts" />
       <Text layoutX="234.0" layoutY="255.0" strokeType="OUTSIDE" strokeWidth="0.0" text="4th : &lt;insert point&gt; pts" />
-      <ImageView fitHeight="41.0" fitWidth="56.0" layoutX="181.0" layoutY="61.0" pickOnBounds="true" preserveRatio="true" />
-      <Button layoutX="14.0" layoutY="22.0" mnemonicParsing="false" style="-fx-background-color: #9E9E9E;" />
+      <Button layoutX="26.0" layoutY="20.0" minWidth="34.0" mnemonicParsing="false" onAction="#returnToMenu" prefHeight="23.0" prefWidth="34.0" style="-fx-background-color: #9E9E9E;">
+         <graphic>
+            <ImageView fitHeight="26.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@/snaked/Icons/backArrow.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
+      <ImageView fitHeight="55.0" fitWidth="54.0" layoutX="178.0" layoutY="54.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@/snaked/Icons/scoreboardButton.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="55.0" fitWidth="54.0" layoutX="367.0" layoutY="54.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@/snaked/Icons/scoreboardButton.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
