Improved the layout of the scoreboard

--- a/src/main/resources/snaked/view/scoreboard.fxml
+++ b/src/main/resources/snaked/view/scoreboard.fxml
@@ -9,16 +9,31 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #9E9E9E;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="snaked.sceneController.ScoreBoardController">
    <children>
-      <Text layoutX="237.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Scoreboard" wrappingWidth="126.78306007385254">
+      <Text layoutX="204.0" layoutY="70.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Sacramento;" text="Scoreboard" wrappingWidth="192.3830966949463">
          <font>
-            <Font size="24.0" />
+            <Font name="System Bold Italic" size="36.0" />
          </font>
       </Text>
-      <Text layoutX="234.0" layoutY="139.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1st : &lt;insert point&gt; pts" />
-      <Text layoutX="232.0" layoutY="180.0" strokeType="OUTSIDE" strokeWidth="0.0" text="2nd : &lt;insert point&gt; pts" />
-      <Text layoutX="234.0" layoutY="218.0" strokeType="OUTSIDE" strokeWidth="0.0" text="3rd : &lt;insert point&gt; pts" />
-      <Text layoutX="234.0" layoutY="289.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5th : &lt;insert point&gt; pts" />
-      <Text layoutX="234.0" layoutY="255.0" strokeType="OUTSIDE" strokeWidth="0.0" text="4th : &lt;insert point&gt; pts" />
+      <Text layoutX="202.0" layoutY="137.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Sacramento;" text="1st : &lt;insert point&gt; pts">
+         <font>
+            <Font size="18.0" />
+         </font></Text>
+      <Text layoutX="198.0" layoutY="182.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Sacramento;" text="2nd : &lt;insert point&gt; pts">
+         <font>
+            <Font size="18.0" />
+         </font></Text>
+      <Text layoutX="200.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Sacramento;" text="3rd : &lt;insert point&gt; pts">
+         <font>
+            <Font size="18.0" />
+         </font></Text>
+      <Text layoutX="201.0" layoutY="309.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Sacramento;" text="5th : &lt;insert point&gt; pts">
+         <font>
+            <Font size="18.0" />
+         </font></Text>
+      <Text layoutX="200.0" layoutY="269.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Sacramento;" text="4th : &lt;insert point&gt; pts">
+         <font>
+            <Font size="18.0" />
+         </font></Text>
       <Button layoutX="26.0" layoutY="20.0" minWidth="34.0" mnemonicParsing="false" onAction="#returnToMenu" prefHeight="23.0" prefWidth="34.0" style="-fx-background-color: #9E9E9E;">
          <graphic>
             <ImageView fitHeight="26.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true">
@@ -27,12 +42,12 @@
                </image>
             </ImageView>
          </graphic></Button>
-      <ImageView fitHeight="55.0" fitWidth="54.0" layoutX="178.0" layoutY="54.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="68.0" fitWidth="77.0" layoutX="127.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@/snaked/Icons/scoreboardButton.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="55.0" fitWidth="54.0" layoutX="367.0" layoutY="54.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="68.0" fitWidth="77.0" layoutX="405.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@/snaked/Icons/scoreboardButton.png" />
          </image>
