Change color scheme, small improvements

--- a/src/main/resources/snaked/cssStyles/MainMenu.css
+++ b/src/main/resources/snaked/cssStyles/MainMenu.css
@@ -5,7 +5,7 @@
 #startButton{
     -fx-background-radius: 20px;
     -fx-text-fill: #111111;
-    -fx-background-color: #29f04d;
+    -fx-background-color: #F7A4A4;
     -fx-border-style: solid;
     -fx-border-width: 2px;
     -fx-border-radius: 15px;
