--- a/src/main/resources/snaked/view/MainMenu.fxml
+++ b/src/main/resources/snaked/view/MainMenu.fxml
@@ -15,7 +15,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="snaked.App">
    <children>
-      <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #29f04d;">
+      <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #F7A4A4;">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -58,7 +58,7 @@
                   <Insets left="5.0" />
                </GridPane.margin>
             </Button>
-            <Button fx:id="scoreboardButton" mnemonicParsing="false" onAction="#goToScoreboard" prefHeight="25.0" prefWidth="86.0" style="-fx-background-color: #29f04d;" textFill="#9e9e9e" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="7">
+            <Button fx:id="scoreboardButton" mnemonicParsing="false" onAction="#goToScoreboard" prefHeight="25.0" prefWidth="86.0" style="-fx-background-color: #F7A4A4;" textFill="#9e9e9e" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="7">
                <font>
                   <Font size="10.0" />
                </font>
@@ -76,7 +76,7 @@
                </image>
             </ImageView>
             <Label prefHeight="17.0" prefWidth="69.0" text="Scoreboard" translateX="-40.0" GridPane.columnIndex="6" GridPane.columnSpan="2" GridPane.rowIndex="8" />
-            <Button fx:id="settingsButton" mnemonicParsing="false" onAction="#goToSettings" style="-fx-background-color: #29f04d;" translateX="-16.0" GridPane.columnIndex="8" GridPane.rowIndex="7">
+            <Button fx:id="settingsButton" mnemonicParsing="false" onAction="#goToSettings" style="-fx-background-color: #F7A4A4;" translateX="-16.0" GridPane.columnIndex="8" GridPane.rowIndex="7">
                <graphic>
                   <ImageView fitHeight="51.0" fitWidth="51.0" onDragDetected="#goToSettings" pickOnBounds="true" preserveRatio="true">
                      <image>
