--- a/src/main/resources/snaked/view/GameBoard.fxml
+++ b/src/main/resources/snaked/view/GameBoard.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -47,5 +48,6 @@
             <Font size="18.0" />
          </font>
       </Text>
+      <Button layoutX="273.0" layoutY="22.0" mnemonicParsing="false" onAction="#testGameOverClick" prefHeight="26.0" prefWidth="116.0" text="Test GameOver" />
    </children>
 </AnchorPane>
