--- a/src/main/resources/snaked/view/SettingsMenu.fxml
+++ b/src/main/resources/snaked/view/SettingsMenu.fxml
@@ -12,8 +12,7 @@
    <children>
       <VBox alignment="CENTER" layoutX="147.0" layoutY="55.0" prefHeight="335.0" prefWidth="309.0" spacing="20.0">
          <children>
-            <Label prefHeight="17.0" prefWidth="70.0" text="Sound" textAlignment="CENTER" />
-            <Button fx:id="volumeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#volumeButtonClick" prefHeight="40.0" prefWidth="56.0" text="VolumeButton">
+            <Button fx:id="volumeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#volumeButtonClick" prefHeight="40.0" prefWidth="42.0" text="VolumeButton">
                <graphic>
                   <ImageView fx:id="volumeIcon" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -22,7 +21,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Label prefHeight="17.0" prefWidth="205.0" text="Choose difficulty level" textAlignment="CENTER" />
+            <Label prefHeight="17.0" prefWidth="205.0" text="Select difficulty level" textAlignment="CENTER" />
             <HBox alignment="CENTER" prefHeight="26.0" prefWidth="240.0" spacing="15.0">
                <children>
                   <Button fx:id="easyButton" mnemonicParsing="false" onAction="#easyButtonClick" prefHeight="26.0" prefWidth="62.0" text="Easy" />
@@ -30,7 +29,7 @@
                   <Button fx:id="hardButton" mnemonicParsing="false" onAction="#hardButtonClick" text="Hard" />
                </children>
             </HBox>
-            <Label prefHeight="17.0" prefWidth="96.0" text="Choose a mapSkin" textAlignment="CENTER" />
+            <Label prefHeight="18.0" prefWidth="125.0" text="Select map skin" textAlignment="CENTER" />
             <HBox alignment="CENTER" prefHeight="26.0" prefWidth="240.0" spacing="15.0">
                <children>
                   <Button fx:id="map1Button" mnemonicParsing="false" onAction="#map1ButtonClick" text="Map 1" />
@@ -38,12 +37,12 @@
                   <Button fx:id="map3Button" mnemonicParsing="false" onAction="#map3ButtonClick" text="Map 3" />
                </children>
             </HBox>
-            <Label prefHeight="17.0" prefWidth="111.0" text="Choose a snake" textAlignment="CENTER" />
+            <Label prefHeight="17.0" prefWidth="111.0" text="Select snake skin" textAlignment="CENTER" />
             <HBox alignment="CENTER" prefHeight="26.0" prefWidth="240.0" spacing="15.0">
                <children>
-                  <Button fx:id="snake1Button" mnemonicParsing="false" onAction="#snake1ButtonClick" text="Snake 1" />
-                  <Button fx:id="snake2Button" mnemonicParsing="false" onAction="#snake2ButtonClick" text="Snake 2" />
-                  <Button fx:id="snake3Button" mnemonicParsing="false" onAction="#snake3ButtonClick" text="Snake 3" />
+                  <Button fx:id="snake1Button" mnemonicParsing="false" onAction="#snake1ButtonClick" text="Green" />
+                  <Button fx:id="snake2Button" mnemonicParsing="false" onAction="#snake2ButtonClick" text="Yellow" />
+                  <Button fx:id="snake3Button" mnemonicParsing="false" onAction="#snake3ButtonClick" text="Blue" />
                </children>
             </HBox>
          </children>
